<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.ucarhu.demo.widget.UCarAutoScaleTextView
            android:textColor="@color/white"
            android:id="@+id/tv_dialog_icon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_failed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:widthPercent="0.48"/>
        <com.ucarhu.demo.widget.UCarAutoScaleTextView
            android:textColor="#f0f0f0"
            android:id="@+id/tv_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_icon_title"
            app:widthPercent="0.45"/>
        <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:id="@+id/gd_vertical_line_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.48"/>
        <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:id="@+id/gd_vertical_line_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.52"/>
        <com.ucarhu.demo.widget.UCarAutoScaleTextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_dialog_done"
            android:background="@drawable/selector_bg_aero_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reconnect"
            android:paddingVertical="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/gd_vertical_line_one"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_message"
            app:widthPercent="0.04"/>
        <com.ucarhu.demo.widget.UCarAutoScaleTextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_dialog_cancel"
            android:background="@drawable/selector_bg_aero_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:paddingVertical="12dp"
            app:layout_constraintLeft_toRightOf="@+id/gd_vertical_line_two"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_message"
            app:widthPercent="0.04"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
