<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center"
        android:id="@+id/rl_cast_player"
        android:background="@drawable/bg"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.ucar.vehiclesdk.UCarSurfaceView
            android:id="@+id/surface_view"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ucar_connect_container"
        android:background="@color/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.ucarhu.demo.widget.UCarAutoScaleTextView
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/tv_ucar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carLink"
            app:layout_constraintBottom_toTopOf="@+id/cl_info_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:widthPercent="0.5"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_info_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:id="@+id/gd_vertical_line_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.65"/>
            <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:id="@+id/gd_vertical_line_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.75"/>
            <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:id="@+id/gd_vertical_line_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.9"/>
            <com.ucarhu.demo.widget.UCarAutoScaleTextView
                android:gravity="center"
                android:id="@+id/tv_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/gd_vertical_line_one"
                app:layout_constraintTop_toTopOf="@+id/iv_usb_icon"
                app:lengthByChar="8"
                app:widthPercent="0.26"/>
            <com.ucarhu.demo.widget.UCarPinCodeView
                android:id="@+id/upc_pin_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/gd_vertical_line_one"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.ucarhu.demo.widget.UCarAutoScaleTextView
                android:textColor="#ddffffff"
                android:gravity="center"
                android:id="@+id/tv_pin_code_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_connect_hint"
                app:layout_constraintBottom_toBottomOf="@+id/ucar_usb_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/gd_vertical_line_one"
                app:widthPercent="0.3"/>
            <View
                android:background="#88f0f0f0"
                android:layout_width="1px"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/gd_vertical_line_one"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/iv_usb_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/connector"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:layout_constraintLeft_toRightOf="@+id/gd_vertical_line_two"
                app:layout_constraintRight_toLeftOf="@+id/gd_vertical_line_third"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.ucarhu.demo.widget.UCarAutoScaleTextView
                android:gravity="center"
                android:id="@+id/ucar_usb_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/usb_usb_hint"
                app:layout_constraintLeft_toRightOf="@+id/gd_vertical_line_two"
                app:layout_constraintRight_toLeftOf="@+id/gd_vertical_line_third"
                app:layout_constraintTop_toBottomOf="@+id/iv_usb_icon"
                app:widthPercent="0.2"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.ucarhu.demo.widget.UCarAutoScaleTextView
            android:textColor="#f0f0f0"
            android:gravity="center_horizontal"
            android:id="@+id/tv_exit"
            android:background="@drawable/selector_bg_aero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/exit"
            android:paddingHorizontal="42dp"
            android:paddingVertical="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_info_container"
            app:widthPercent="0.05"/>
        <com.ucarhu.demo.widget.UCarAutoScaleTextView
            android:textColor="#f0f0f0"
            android:gravity="center_horizontal"
            android:id="@+id/tv_sdk_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:widthPercent="0.2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
